[gd_scene load_steps=10 format=2]

[ext_resource path="res://ui/components/ai_process_button.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/components/prompting_area.gd" type="Script" id=2]
[ext_resource path="res://ui/components/prompt_box.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/components/current_model_thumbnail.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/icons/buttons_g26.png" type="Texture" id=5]
[ext_resource path="res://assets/icons/buttons_g25.png" type="Texture" id=6]
[ext_resource path="res://assets/icons/buttons_g30.png" type="Texture" id=7]
[ext_resource path="res://assets/icons/buttons_g31.png" type="Texture" id=8]
[ext_resource path="res://ui/components/modifier_drop.gd" type="Script" id=9]

[node name="PromptingArea" type="MarginContainer"]
margin_right = 1024.0
margin_bottom = 119.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 119.0
custom_constants/separation = 12

[node name="Prompting" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 813.0
margin_bottom = 119.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 8.2

[node name="PositivePrompt" parent="HBoxContainer/Prompting" instance=ExtResource( 3 )]
margin_right = 813.0
info_text = "POSITIVE_PROMPT"

[node name="NegativePrompt" parent="HBoxContainer/Prompting" instance=ExtResource( 3 )]
margin_top = 61.0
margin_right = 813.0
margin_bottom = 119.0
info_text = "NEGATIVE_PROMPT"

[node name="Buttons" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 825.0
margin_right = 1024.0
margin_bottom = 119.0
rect_min_size = Vector2( 190, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="Generate" parent="HBoxContainer/Buttons" instance=ExtResource( 1 )]
margin_right = 199.0
margin_bottom = 57.0
text = "GENERATE_BUTTON"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Buttons"]
margin_top = 61.0
margin_right = 199.0
margin_bottom = 119.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Seed" type="HBoxContainer" parent="HBoxContainer/Buttons/VBoxContainer"]
margin_right = 199.0
margin_bottom = 30.0

[node name="SeedLabel" type="Label" parent="HBoxContainer/Buttons/VBoxContainer/Seed"]
margin_top = 5.0
margin_right = 33.0
margin_bottom = 25.0
text = "SEED"

[node name="Seed" type="LineEdit" parent="HBoxContainer/Buttons/VBoxContainer/Seed"]
margin_left = 37.0
margin_right = 151.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
text = "-1"

[node name="Random" type="TextureButton" parent="HBoxContainer/Buttons/VBoxContainer/Seed"]
margin_left = 155.0
margin_right = 175.0
margin_bottom = 30.0
rect_min_size = Vector2( 20, 0 )
hint_tooltip = "RANDOM_SEED"
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 5 )
texture_focused = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="Reuse" type="TextureButton" parent="HBoxContainer/Buttons/VBoxContainer/Seed"]
margin_left = 179.0
margin_right = 199.0
margin_bottom = 30.0
rect_min_size = Vector2( 20, 0 )
hint_tooltip = "REUSE_SEED"
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )
texture_focused = ExtResource( 8 )
expand = true
stretch_mode = 5

[node name="MinimalistMode" type="CheckBox" parent="HBoxContainer/Buttons/VBoxContainer"]
visible = false
margin_top = 28.0
margin_right = 199.0
margin_bottom = 52.0
pressed = true
text = "MINIMALIST_MODE"

[node name="CurrentModelThumbnail" parent="HBoxContainer/Buttons/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 34.0
margin_right = 199.0
margin_bottom = 58.0

[node name="DropAreas" type="HBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 119.0
mouse_filter = 2

[node name="Prompt" type="VBoxContainer" parent="DropAreas"]
margin_right = 820.0
margin_bottom = 119.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 8.2

[node name="PositiveDropArea" type="Control" parent="DropAreas/Prompt"]
margin_right = 820.0
margin_bottom = 57.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 9 )

[node name="NegativeDropArea" type="Control" parent="DropAreas/Prompt"]
margin_top = 61.0
margin_right = 820.0
margin_bottom = 119.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 9 )

[node name="Spacing" type="Control" parent="DropAreas"]
margin_left = 824.0
margin_right = 1024.0
margin_bottom = 119.0
rect_min_size = Vector2( 190, 0 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[connection signal="pressed" from="HBoxContainer/Buttons/Generate" to="." method="_on_Generate_pressed"]
[connection signal="resized" from="HBoxContainer/Buttons/VBoxContainer/Seed/Seed" to="." method="_on_Seed_resized"]
[connection signal="pressed" from="HBoxContainer/Buttons/VBoxContainer/Seed/Random" to="." method="_on_Random_pressed"]
[connection signal="pressed" from="HBoxContainer/Buttons/VBoxContainer/Seed/Reuse" to="." method="_on_Reuse_pressed"]
[connection signal="modifier_dropped" from="DropAreas/Prompt/PositiveDropArea" to="." method="_on_PositiveDropArea_modifier_dropped"]
[connection signal="modifier_dropped" from="DropAreas/Prompt/NegativeDropArea" to="." method="_on_NegativeDropArea_modifier_dropped"]
